# Python-Wars-Solo

./: .gitignore  LICENSE  LICENSE.txt  README.rst  changelog.md  go.py  pyproject.toml  releases.md  setup.py  stuff.py
.github/: FUNDING.yml
docs/: Makefile  conf.py  history.rst  index.rst  make.bat  ref_stuff.rst
src/: stuff.py
